2004-02-19  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-file-selector-util.c: use gtk_dialog_run instead of the
	equivalent hand made solution we used till now
	(create_gtk_selector): mark filters name for translation (fixes 
	bug #133604)

	* gedit-preferences-dialog.c: now the Syntax Highlight page really
	works (fixes bug #133269 and #133481)

	* gedit-preferences.glade2: use GtkColorButton instead of
	GnomeColorButton in the Syntax Highlight page

2004-02-13  Paolo Maggi  <paolo.maggi@polit.it>

	* recent-files/*: Update to latest libegg recent-files code

2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-prefs-manager.h: removed unused #define 
	GPM_DEFAULT_SAVE_ENCODING

	* gedit-ui.xml: removed unused hidden Debug menu

2004-02-10  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* dialogs/gedit-preferences-dialog.c:
	(setup_syntax_highlighting_page): Don't highlight single column lists.

2004-02-06  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am:
	  dialogs/Makefile.am:
	  recent-files/Makefile.am:
	use $(WARN_CFLAGS) and $(DISABLE_DEPRECATED_CFLAGS)

2004-02-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file-selector-utils.c: handle response
	GTK_RESPONSE_DELETE_EVENT like a cancel. (#133851)

2004-01-15  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.3 released ]

2004-01-13  Paolo Maggi  <paolo.maggi@polito.it> 

	* gedit-view.[ch] (gedit_view_set_editable): new function

	* gedit-menus.[ch] (gedit_menus_all_sensible_verbs)
	(gedit_menus_loading_sensible_verbs)
	(gedit_menus_printing_sensible_verbs): new sets of verbs

	* gedit-mdi.[ch] (state_changed): new signal
	(gedit_mdi_get_state)(gedit_mdi_set_state): new methods

	* gedit-mdi.c (update_ui_according_to_state): new function.
	(gedit_mdi_add_open_button): returns the button
	(gedit_mdi_remove_views_handler): doesn't remove view if state
	is different from GEDIT_STATE_NORMAL
	(gedit_mdi_set_active_window_verbs_sensitivity): take care of
	state
